--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "deploy": "serverless deploy",
-    "encrypt": "serverless encrypt"
+    "encrypt": "serverless encrypt",
+    "decrypt": "serverless decrypt"
   },
   "keywords": [],
   "author": "",
