Getting email working

--- a/serverless.yml
+++ b/serverless.yml
@@ -15,6 +15,7 @@ provider:
     MAILGUN_OVERRIDE_EMAIL: ${self:custom.secrets.MAILGUN_OVERRIDE_EMAIL}
     JWT_SECRET: ${self:custom.secrets.JWT_SECRET}
     SALT_ROUNDS: ${self:custom.secrets.SALT_ROUNDS}
+    API_REGION: !Ref AWS::Region
 plugins:
   - serverless-secrets-plugin
   - serverless-offline
@@ -23,6 +24,7 @@ custom:
 functions:
   app:
     handler: app.handler
+    role: lambdaExecutionRole
     events: 
       - http: 
           path: /
@@ -32,3 +34,44 @@ functions:
           path: /{proxy+}
           method: ANY
           cors: true
+resources:
+  Resources:
+    lambdaExecutionRole:
+      Type: AWS::IAM::Role
+      Properties:
+        Path: /roles/default/
+        AssumeRolePolicyDocument:
+          Version: "2012-10-17"
+          Statement:
+            - Effect: Allow
+              Principal:
+                Service:
+                  - lambda.amazonaws.com
+              Action: sts:AssumeRole
+        Policies:
+          - PolicyName: ${self:service}-${opt:stage, self:provider.stage}-lambdaDefaultPolicy
+            PolicyDocument:
+              Version: "2012-10-17"
+              Statement:
+                - Effect: Allow
+                  Action:
+                    - logs:CreateLogGroup
+                    - logs:CreateLogStream
+                    - logs:PutLogEvents
+                  Resource:
+                    Fn::Join:
+                      - ":"
+                      - - "arn:aws:logs"
+                        - Ref: "AWS::Region"
+                        - Ref: "AWS::AccountId"
+                        - "log-group:/aws/lambda/*:*:*"
+                - Effect: Allow
+                  Action:
+                    - ses:SendEmail
+                  Resource:
+                    Fn::Join:
+                      - ":"
+                      - - "arn:aws:ses"
+                        - Ref: "AWS::Region"
+                        - Ref: "AWS::AccountId"
+                        - "identity/*"
