--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "serverless offline",
     "deploy": "serverless deploy",
+    "destroy": "serverless remove",
     "encrypt": "serverless encrypt",
     "decrypt": "serverless decrypt"
   },
@@ -39,6 +41,7 @@
     "serverless-http": "^2.6.0"
   },
   "devDependencies": {
+    "aws-sdk": "^2.810.0",
     "serverless": "^2.15.0",
     "serverless-offline": "^6.8.0",
     "serverless-plugin-reducer": "^3.2.4",
